deployment/dev/envoy.yaml
static_resources:
  listeners:
    - name: ingress_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: ${CEPTA_ENVOY_INGRESS_PORT} }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: grpc_services
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/grpc/auth/" }
                          route:
                            prefix_rewrite: "/"
                            cluster: auth_service
                            cors:
                              # allow_origin: ["*"]
                              allow_headers: content-type, x-grpc-web, authorization
                            # max_grpc_timeout: 0s
                        - match: { prefix: "/api/grpc/replayer/" }
                          route:
                            prefix_rewrite: "/"
                            cluster: replayer_service
                            cors:
                              # allow_origin: ["*"]
                              allow_headers: content-type, x-grpc-web, authorization
                            # max_grpc_timeout: 0s
                        - match: { prefix: "/api/grpc/usermgmt/" }
                          route:
                            prefix_rewrite: "/"
                            cluster: usermgmt_service
                            cors:
                              # allow_origin: ["*"]
                              allow_headers: content-type, x-grpc-web, authorization
                            # max_grpc_timeout: 0s
                        - match: { prefix: "/api" }
                          route:
                            cluster: osiris_service
                        - match: { prefix: "/ws/userdata" }
                          route:
                            upgrade_configs:
                              - upgrade_type: websocket
                                enabled: true
                            cluster: notification_service
                        - match: { prefix: "/" }
                          route:
                            cluster: anubis_service
                http_filters:
                  # - name: envoy.cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config: 
                      "@type": type.googleapis.com/envoy.config.filter.http.jwt_authn.v2alpha.JwtAuthentication
                      providers:
                        auth:
                          forward: true
                          forward_payload_header: x-jwt-payload
                          # No idea how payload_in_metadata works tbh
                          # payload_in_metadata: x-jwt-metadata
                          issuer: ceptaproject@gmail.com
                          audiences:
                          - https://bptlab.github.io/cepta
                          local_jwks:
                            filename: /etc/envoy/jwks/jwks.json
                      rules:
                      - match: {prefix: /api}
                        requires: {provider_name: auth}
                  - name: envoy.grpc_web
                  - name: envoy.router
  clusters:
    - name: replayer_service
      connect_timeout: 15.0s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      hosts: [{ socket_address: { address: ${ENVOY_HOST}, port_value: ${CEPTA_PRODUCER_TRAIN_DATA_GRPC_PORT} }}]

    - name: osiris_service
      connect_timeout: 15.0s
      type: logical_dns
      lb_policy: round_robin
      hosts: [{ socket_address: { address: ${ENVOY_HOST}, port_value: ${CEPTA_WEBUI_BACKEND_PORT} }}]

    - name: notification_service
      connect_timeout: 15.0s
      type: logical_dns
      lb_policy: round_robin
      hosts: [{ socket_address: { address: ${ENVOY_HOST}, port_value: ${CEPTA_NOTIFICATION_BACKEND_PORT} }}]

    - name: auth_service
      connect_timeout: 15.0s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      hosts: [{ socket_address: { address: ${ENVOY_HOST}, port_value: ${CEPTA_AUTH_BACKEND_PORT} }}]

    - name: usermgmt_service
      connect_timeout: 15.0s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      hosts: [{ socket_address: { address: ${ENVOY_HOST}, port_value: ${CEPTA_USERMGMT_BACKEND_PORT} }}]

    - name: anubis_service
      connect_timeout: 15.0s
      type: logical_dns
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      lb_policy: round_robin
      hosts: [{ socket_address: { address: ${ENVOY_HOST}, port_value: ${CEPTA_WEBUI_FRONTEND_PORT} }}]
